--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="hello">Hello mobile.android!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    <string name="hint_email_address">Input email address</string>
+    <string name="hint_password">Input password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="forget_password"><u>Forget password?</u></string>
 </resources>
